Bug 1503748 - Trackpad swipe navigation and mobile horizontal scrolling broken, vertical scrolling partially broken when zoomed

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -65,8 +65,7 @@
 /* fixed global header (begin) */
     @media screen and (min-width: 800px) {
         html, body {
-            overflow: hidden; /* Disable bounce effect (Safari) */
-            overscroll-behavior: none;
+            overflow-y: hidden; /* Disable bounce effect (Safari) */
             height: 100%;
         }
 
@@ -81,7 +80,6 @@
             overflow-y: scroll;
             -webkit-overflow-scrolling: touch; /* Enable momentum scrolling on iOS */
             scroll-behavior: smooth;
-            overscroll-behavior: contain;
             will-change: transform; /* Enable smooth scrolling (Safari) */
         }
     }
